# opcua_browser

./: .clang-format  .gitignore  ADDING_COMPANION_SPECS.md  BrowserView.qml  CMakeLists.txt  ConnectionView.qml  ContentView.qml  ContextMenu.qml  DashboardView.qml  Main.qml  NodeAttributeList.qml  NodeDetailView.qml  NodeMonitoringList.qml  NodeReferenceList.qml  NodesView.qml  PRIVACY_POLICY.md  README.md  StyledButton.qml  StyledIconTabButton.qml  StyledItemSelector.qml  StyledScrollBar.qml  StyledTabButton.qml  attribute.cpp  attribute.h  attributemodel.cpp  attributemodel.h  backend.cpp  backend.h  dashboarditem.cpp  dashboarditem.h  dashboarditemmodel.cpp  dashboarditemmodel.h  get_dependencies.sh  main.cpp  monitoreditem.cpp  monitoreditem.h  monitoreditemmodel.cpp  monitoreditemmodel.h  opcuahelper.cpp  opcuahelper.h  (+13 more)
.github/workflows/: android.yml  clang-format-check.yml  deploy.yml  qmllint-check.yml  reuse-check.yml
.reuse/: dep5
android/: AndroidManifest.xml
font/: SwanseaBold.ttf.license
qml/: BrowserView.qml  ConnectionView.qml  ContentView.qml  ContextMenu.qml  DashboardConfigurationView.qml  DashboardView.qml  ImprintView.qml  Main.qml  NodeAttributeList.qml  NodeDetailView.qml  NodeReferenceList.qml  NodesView.qml  SettingsView.qml
qml/controls/: SideMenu.qml  StyledButton.qml  StyledComboBox.qml  StyledEndpointComboBox.qml  StyledIconTabButton.qml  StyledItemSelector.qml  StyledMenuItem.qml  StyledMenuSeparator.qml  StyledScrollBar.qml  StyledTabButton.qml  StyledTextField.qml
qml/style/: Style.qml  StyleDefinitions.qml  ThemeBright.qml  ThemeBrowserView.qml  ThemeButton.qml  ThemeComboBox.qml  ThemeConnectionView.qml  ThemeContextMenu.qml  ThemeDark.qml  ThemeDashboard.qml  ThemeDashboardItem.qml  ThemeDefault.qml  ThemeHeader.qml  ThemeIconTabButton.qml  ThemeImprintView.qml  ThemeItemSelector.qml  ThemeListView.qml  ThemeMainWindow.qml  ThemeNodesView.qml  ThemeScrollBar.qml  ThemeSideMenu.qml  ThemeTabButton.qml  ThemeTextField.qml
src/: CMakeLists.txt  attribute.cpp  attributemodel.cpp  attributemodel.h  backend.cpp  backend.h  certificateitemmodel.cpp  certificateitemmodel.h  companionspecdashboardcreator.cpp  companionspecdashboardcreator.h  constants.cpp  constants.h  dashboarditem.cpp  dashboarditem.h  dashboarditemmodel.cpp  dashboarditemmodel.h  languageitemmodel.cpp  languageitemmodel.h  logging.cpp  logging.h  loggingviewfiltermodel.cpp  loggingviewfiltermodel.h  loggingviewmodel.cpp  loggingviewmodel.h  main.cpp  monitoreditem.cpp  monitoreditem.h  monitoreditemmodel.cpp  monitoreditemmodel.h  opcuahelper.cpp  opcuahelper.h  opcuamodel.cpp  opcuamodel.h  reference.cpp  reference.h  referencemodel.cpp  referencemodel.h  treeitem.cpp  treeitem.h  types.h  (+6 more)
src/android/: AndroidManifest.xml
src/icons/: logo_basyskom.svg.license
src/languages/: English_en_GB.ts  German_de_DE.ts
src/qml/: BrowserView.qml  ConnectionView.qml  ContentView.qml  ContextMenu.qml  DashboardConfigurationView.qml  DashboardView.qml  ImprintView.qml  LicenseView.qml  LoggingView.qml  Main.qml  MessageView.qml  NodeAttributeList.qml  NodeDetailView.qml  NodeReferenceList.qml  NodesView.qml  SettingsView.qml
src/qml/controls/: SideMenu.qml  StyledButton.qml  StyledComboBox.qml  StyledEndpointComboBox.qml  StyledIconTabButton.qml  StyledItemSelector.qml  StyledMenuItem.qml  StyledMenuSeparator.qml  StyledScrollBar.qml  StyledSpinBox.qml  StyledTabButton.qml  StyledTextField.qml
src/qml/style/: Style.qml  StyleDefinitions.qml  ThemeBright.qml  ThemeBrowserView.qml  ThemeButton.qml  ThemeComboBox.qml  ThemeConnectionView.qml  ThemeContextMenu.qml  ThemeDark.qml  ThemeDashboard.qml  ThemeDefault.qml  ThemeHeader.qml  ThemeIconTabButton.qml  ThemeItemSelector.qml  ThemeLicenseView.qml  ThemeListView.qml  ThemeLoggingView.qml  ThemeMainWindow.qml  ThemeMessageView.qml  ThemeNodesView.qml  ThemeScrollBar.qml  ThemeSettingsView.qml  ThemeSideMenu.qml  ThemeSpinBox.qml  ThemeTabButton.qml  ThemeTextField.qml
